# Nokia-PK-2025

./: .gitignore
src/BTS/Application/UeConnection/: UeConnection.cpp
src/COMMON/Messages/: MessageId.hpp
src/UE/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp  IEventsHandler.hpp  SmsRepository.cpp  SmsRepository.hpp
src/UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  IUserPort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
src/UE/Application/States/: BaseState.cpp  BaseState.hpp  CallingState.cpp  CallingState.hpp  ComposingSmsState.cpp  ComposingSmsState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  IncomingCallState.cpp  IncomingCallState.hpp  NotConnectedState.cpp  TalkingState.cpp  TalkingState.hpp  ViewingSingleSmsState.cpp  ViewingSingleSmsState.hpp  ViewingSmsListState.cpp  ViewingSmsListState.hpp
src/UE/ApplicationEnvironment/: IUeGui.hpp
src/UE/Tests/Application/: ApplicationTestSuite.cpp  CMakeLists.txt  SmsRepositoryTest.cpp
src/UE/Tests/Application/Mocks/: IBtsPortMock.hpp  IEventsHandlerMock.hpp  IUeGuiMock.hpp  IUserPortMock.hpp
src/UE/Tests/Application/Ports/: BtsPortTestSuite.cpp  UserPortTestSuite.cpp
